--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://waveshocker.github.io/weather_dashboard/",
   "name": "weather-dashboard",
   "version": "0.1.0",
   "private": true,
